--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-elements": "^1.2.7",
+    "react-native-safe-area-view": "^1.0.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^2.0.1"
   },
