--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 # Xcode
 #
-build/
+*build/*
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -57,5 +57,3 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
-android/
-ios/
