--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.2.10",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
