--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.9.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
