--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/masked-view": "^0.1.9",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
+    "expo": "^37.0.7",
+    "expo-secure-store": "^8.1.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
