--- a/package.json
+++ b/package.json
@@ -10,14 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^2.3.2",
-    "@react-native-community/masked-view": "^0.1.9",
-    "@react-navigation/native": "^5.1.5",
-    "@react-navigation/stack": "^5.2.10",
-    "expo": "^37.0.7",
-    "expo-secure-store": "^8.1.0",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react": "^16.11.0",
+    "react-native": "^0.62.2",
     "react-native-animatable": "^1.3.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.2.7",
