--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.9",
+    "expo": "^37.0.7",
+    "expo-image-picker": "^8.1.0",
+    "expo-mail-composer": "^8.1.0",
+    "expo-notifications": "^0.1.1",
+    "expo-permissions": "^8.1.0",
+    "expo-secure-store": "^8.1.0",
     "react": "^16.11.0",
     "react-native": "^0.62.2",
     "react-native-animatable": "^1.3.3",
@@ -42,6 +49,4 @@
     "react-test-renderer": "16.11.0"
   },
   "jest": {
-    "preset": "react-native"
-  }
-}
+  
