--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-navigation": "^4.3.7",
     "react-navigation-drawer": "^2.4.11",
     "react-navigation-stack": "^2.3.11",
+    "react-navigation-tabs": "^2.8.11",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
